--- a/.gitignore
+++ b/.gitignore
@@ -114,3 +114,4 @@ xcuserdata
 
 
 # End of https://www.toptal.com/developers/gitignore/api/xcode,xcodeinjection,swift,swiftpackagemanager,swiftpm
+.DS_Store
